--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-material-ui-carousel": "^3.4.2",
         "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
+        "react-spinners": "^0.13.8",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
