big big changes

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@aws-amplify/datastore": "^5.0.10",
+        "@aws-amplify/storage": "^6.0.12",
         "@aws-amplify/ui-react": "^6.0.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
